--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
       crossorigin="anonymous"
     />
-    <title>website</title>
+    <title>Instafood</title>
   </head>
   <body>
     <nav class="navbar">
